--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -38,5 +38,12 @@ security:
     access_control:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER } , requires_channel: http
-        - { path: ^/security/alarm, roles: IS_AUTHENTICATED_ANONYMOUSLY , requires_channel: http}
+        #- { path: ^/security/alarm, roles: IS_AUTHENTICATED_ANONYMOUSLY , requires_channel: http}
         #- { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY , requires_channel: http}
+
+    # La partie role_hierarchy contient la hiérarchie des rôles
+    # Un éditeur sera également utilisateur
+    # Un administrateur sera également éditeur et donc utilisateur
+    role_hierarchy:
+        ROLE_ADMIN: ROLE_USER
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
