Remove sensitive informations in .env file

--- a/.env
+++ b/.env
@@ -29,17 +29,17 @@ APP_SECRET=4a9d46c05eec544a5e071ddebb988044
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3308/mysecurityclever?serverVersion=5.7
+DATABASE_URL=
 ###< doctrine/doctrine-bundle ###
 
 
 ###> symfony/google-mailer ###
 # Gmail SHOULD NOT be used on production, use it in development only.
-MAILER_DSN=gmail://alhadoumpascal@gmail.com:xshfzcoqblghphiq@default
+MAILER_DSN=
 ###< symfony/google-mailer ###
 
 ###> symfony/twilio-notifier ###
-TWILIO_DSN=twilio://AC03ba20439ce9da59459eccbd70c36853:a450951cc46ca76af057d46015a131b2@default?from=FROM
+TWILIO_DSN=
 ###>Test Credentials
-#TWILIO_DSN=twilio://AC31f51643d9e7cf8462d19e525e71b8e5:cc2704f96146b4fa862fa7910e64d37f@default?from=FROM
+#TWILIO_DSN=
 ###< symfony/twilio-notifier ###
